--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,23 +11,16 @@
 			  <li class="menu-text">{% include /logo.html %}{% unless page.title == "Home" %}{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}{% endunless %}</li>
 			</ul>
 		</div>
-		<div class="top-bar-right">
-			<ul class="menu" data-responsive-menu="drilldown medium-dropdown">
-				<li class="has-submenu">
-					<a href="#">Nav</a>
-					<ul class="submenu menu vertical" data-submenu>
-            {% for node in site.pages %}
-            {% if node.url contains site.baseurl %}
-            {% assign node_url_parts = node.url | split: '/' %}
-            {% assign node_url_parts_size = node_url_parts | size %}
-            {% assign filename = node_url_parts | last %}
-              <li><a href="{{node.url}}">{{node.title}}</a></li>
-            {% endif %}
-            {% endfor %}
-				
-					</ul>
-				</li>
-			</ul>
+		<div class="top-bar-right" align="left">
+			  <li>
+				  <a href="/" class="sprite nav-home">
+				  <img src="/img/nav-home.png" alt="Home">
+				  </a>
+				  &nbsp;
+				  <a href="/about" class="sprite nav-about">
+				  <img src="/img/nav-about.png" alt="About">
+				  </a>
+			  </li>
 		</div>
 	</div>
   </nav>
