--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,38 @@ main {
   }
 }
 
+.sprite {
+display: inline-block;
+width: 32px;
+height: 32px;
+overflow: hidden;
+position: relative;    
+}
+
+.sprite img {
+position: absolute;
+width: 32px;
+height: 64px;
+-webkit-transition: all 0.1s linear;
+-moz-transition: all 0.1s linear;
+-o-transition: all 0.1s linear;
+transition: all 0.1s linear;
+}
+.sprite:hover img {
+top: -32px;
+}
+
+.sprite-nav-home img {
+left: 0;
+top: 0;
+}
+.sprite-nav-about img {
+left: -32px;
+top: 0;
+}
+
+
+
 body{
   background-image: url(img/daggerwrath.png)
 }
