Dunno wtf this is lol

--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,1 +1,2 @@
-<a href="https://twitter.com/{{ include.username }}"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span><span class="username">{{ include.username }}</span></a>
+{% assign author = site.data.users[page.author] %}
+<a href="https://twitter.com/{{ author.github }}"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span><span class="username">{{ author.github }}</span></a>
