--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,85 +1,4 @@
-<<<<<<< HEAD
+
 <header>
-<!-- Small Navigation -->
-<div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
-  <a class="logo-small show-for-small-only" href="#">{% include /logo.html %}</a>
-  <button class="menu-icon" type="button" data-toggle></button>
-  <div class="title-bar-title">Menu</div>
-</div>
-
-<!-- Medium-Up Navigation -->
-<nav class="top-bar" id="nav-menu">
-
-  <div class="logo-wrapper hide-for-small-only">
-    <div class="logo" align="center">
-      {% include /logo.html %}
-    </div>
-  </div>
-
-  <!-- Left Nav Section -->
-  <div class="top-bar-left">
-    <ul class="vertical medium-horizontal menu">
-		<li class="nav">
-			<a href="/" class="sprite nav-home">
-				<img src="/img/nav-home.png" alt="Home"><div class="nav-text">Home</div>
-			</a>
-		</li>
-    </ul>
-  </div>
-  
-  <!-- Right Nav Section -->
-  <div class="top-bar-right">
-  <ul class="vertical medium-horizontal menu">
-  <li class="nav"><a href="/about" class="sprite nav-about">
-				  <img src="/img/nav-about.png" alt="About"><div class="nav-text">About</div>
-				  </a></li>
-	
-	</ul>
-  </div>
-
-</nav>
-</div>
+	{% include nav.html %}
 </header>
-=======
-<header>
-<!-- Small Navigation -->
-<div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
-  <a class="logo-small show-for-small-only" href="#">{% include /logo.html %}</a>
-  <button class="menu-icon" type="button" data-toggle></button>
-  <div class="title-bar-title">Menu</div>
-</div>
-
-<!-- Medium-Up Navigation -->
-<nav class="top-bar" id="nav-menu">
-
-  <div class="logo-wrapper hide-for-small-only">
-    <div class="logo" align="center">
-      {% include /logo.html %}
-    </div>
-  </div>
-
-  <!-- Left Nav Section -->
-  <div class="top-bar-left">
-    <ul class="vertical medium-horizontal menu">
-		<li class="nav">
-			<a href="/" class="sprite nav-home">
-				<img src="/img/nav-home.png" alt="Home"><div class="nav-text">Home</div>
-			</a>
-		</li>
-    </ul>
-  </div>
-  
-  <!-- Right Nav Section -->
-  <div class="top-bar-right">
-  <ul class="vertical medium-horizontal menu">
-  <li class="nav"><a href="/about" class="sprite nav-about">
-				  <img src="/img/nav-about.png" alt="About"><div class="nav-text">About</div>
-				  </a></li>
-	
-	</ul>
-  </div>
-
-</nav>
-</div>
-</header>
->>>>>>> efe7d51e143c084a850bde6ab9dea9982e6ac76d
