--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,37 +1,18 @@
-<<<<<<< HEAD
+---
+layout: compress
+---
 <!DOCTYPE html>
 <html>
 
   {% include head.html %}
 
-  <body>
-
+  <main>
+	<div class="row full">
     {% include header.html %}
-
-    <main>
+	
         {{ content }}
-    </main>
 
     {% include footer.html %}	
-
-  </body>
+	</div>
+  </main>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <main>
-        {{ content }}
-    </main>
-
-    {% include footer.html %}	
-
-  </body>
-</html>
->>>>>>> efe7d51e143c084a850bde6ab9dea9982e6ac76d
