--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -12,3 +12,4 @@
   {% if paginator.next_page %}
     <a rel="next" class="posts older btn small" href="{{ site.baseurl }}page{{ paginator.next_page }}/">Older Posts →</a>
   {% endif %}
+</nav>
