--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,11 @@
 
 @import 'foundation';
 @include foundation-everything;
+
+@import url("https://fonts.googleapis.com/css?family=Share+Tech+Mono");
+
 @import 'nav';
+@import 'sidebars';
 
 header{
   display: inline-block;
@@ -14,6 +18,7 @@ header{
   padding: 0px;
   background-color: black;
   color: white;
+  z-index: 10;
 }
 footer{
   display: inline-block;
@@ -21,36 +26,30 @@ footer{
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 0px;
+  padding: 20px;
   background-color: black;
   color: white;
+  z-index: 10;
+}
+
+.main-content{
+  z-index: 0;
+  display: inline-block;
 }
 @include breakpoint(medium){
   .row.full {
 		max-width: 100%;
 	}
   .main-content{
-    display: block;
-		margin: 0 auto;
-    position: relative;
-    padding-top: 55px;
-  }
+    position: absolute;
+    padding-top: 50px;
 
-  .left-sidebar{
-    display: inline-block;
-    position: fixed;
-    left: 0;
-    top: 48px;
-    bottom: 60px;
-    background-color: #202020;
-  }
-
-  .right-sidebar{
-    display: inline-block;
-    position: fixed;
-    right: 0;
-    top: 48px;
-    bottom: 60px;
-    background-color: #202020;
+    .parallax-content {
+      display: block;
+      position: relative;
+      padding-right: 0;
+      padding-left: 0;
+      background-color: #fff;
+    }
   }
 }
